# QualGate

./: README.md
AUV-Tasks-Unclean/: CMakeLists.txt  README.md
AUV-Tasks-Unclean/include/: GateEdge.h
AUV-Tasks-Unclean/src/: GateEdge.cpp  demo.cpp  gate.cpp  main.cpp  test.cpp  track.cpp  yaw.cpp
